# LazySmallCheck2012

./: .ghci  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  LazySmallCheck2012.cabal  LazySmallCheck2012.hs  PartialValues.lhs  README.md  default.nix  lazysmallcheck2012.cabal  shell.nix
LazySmallCheck2012/: BigWord.hs  Core.lhs  FunctionalValues.lhs  Stats.hs  TH.hs
LazySmallCheck2012/FunctionalValues/: Instances.hs
Test/: LazySmallCheck.hs  LazySmallCheck2012.hs  PartialValues.lhs
Test/LazySmallCheck2012/: Core.lhs  FunctionalValues.lhs  Instances.hs  Stats.hs  TH.hs
nix/: nixpkgs.nix
suite/: Functionality.hs  Performance.hs  Process.hs  Suite.hs  performance.sh
suite/performance/: LazySmallCheck.hs
suite/performance/Benchmarks/: Catch.hs  Countdown.hs  Huffman.hs  ListSet.hs  Mate.hs  Mux.hs  RedBlack.hs  RegExp.hs  Sad.hs  SumPuz.hs  Turner.hs
suite/performance/LSC2008/: TestCatch.hs  TestCircuits1.hs  TestCircuits2.hs  TestCircuits3.hs  TestCountdown1.hs  TestCountdown2.hs  TestHuffman1.hs  TestHuffman2.hs  TestListSet1.hs  TestMate.hs  TestMux2.hs  TestRedBlack.hs  TestRegExp.hs  TestSumPuz.hs  TestTurner.hs
suite/performance/LSC2012/: TestCatch.hs  TestCircuits1.hs  TestCircuits2.hs  TestCircuits3.hs  TestCountdown1.hs  TestCountdown2.hs  TestHuffman1.hs  TestHuffman2.hs  TestListSet1.hs  TestMate.hs  TestMux2.hs  TestRedBlack.hs  TestRegExp.hs  TestSumPuz.hs  TestTurner.hs
